...

                OutlinedTextField(
                    value = usuario,
                    onValueChange = { usuario = it; vazioUsuario = false },
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("campoUsuario"),
                    shape = RoundedCornerShape(16.dp),
                    trailingIcon = {
                        Icon(
                            Icons.Default.Person,
                            null,
                            modifier = Modifier.size(16.dp),
...
                    colors = ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.tertiary)
                ) {
                    if (isLoading) {
                        CircularProgressIndicator(modifier = Modifier.size(24.dp), color = MaterialTheme.colorScheme.onSurface)
                    } else {
                        Text(
                            text = "Cadastrar",
                            fontFamily = Baskervville,
                            fontSize = 18.sp,
                            fontWeight = FontWeight.Bold,
                            color = if (darkTheme) MaterialTheme.colorScheme.onSecondary else MaterialTheme.colorScheme.onSurface
                        )
                    }
...
